--- a/index.html
+++ b/index.html
@@ -172,15 +172,16 @@ Grand Miramar All Luxury Suites & Residences es un refugio único con instalacio
 <script src="js/jquery.js"></script>
 <script src="js/materialize.min.js"></script>
 <script src="js/app.js"></script>
-<!-- Global site tag (gtag.js) - Google Analytics 
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142548587-1"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143036095-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-142548587-1');
-</script>-->
+  gtag('config', 'UA-143036095-1');
+</script>
+
 
 </html>
 
